# Openloong-dyn-control

./: .gitignore  CMakeLists.txt  build.sh  build_sim.sh  install_dependency.sh  rebuild.sh
algorithm/: gait_scheduler.h  pino_kin_dyn.cpp  pino_kin_dyn.h  wbc_priority.cpp
common/: PVT_ctrl.cpp  PVT_ctrl.h  joint_ctrl_config.json  joint_ctrl_config_sim.json  realtime_tools.cpp  realtime_tools.h  robot_interface.h  scheduler.h
demo/: bip4_walk_wbc.cpp
hw_interface/: CMakeLists.txt
hw_interface/config/: 99-candlelight.rules  bus.yml  config.yml  zeroerr.eds
hw_interface/include/: HW_Interface.h  ahrs.h  cl_color.h  motor_manager.h  t265.h
hw_interface/scripts/: bus_config.py  generate_config.py  setup_can.sh
hw_interface/src/: HW_Interface.cpp  ahrs.cpp  ahrs.h  crc_table.cpp  crc_table.h  hw_plugin.h  motor_manager.cpp  motor_manager.h  t265.cpp  t265.h
models/bip4_des/: bip4_des.urdf  bip4_des.xml  scene_bip4.xml
models/bip4_des/meshes/: base_link.STL  l_ankle_Link.STL  l_hip_roll_Link.STL  l_hip_yaw_Link.STL  l_knee_Link.STL  r_ankle_Link.STL  r_hip_roll_Link.STL  r_hip_yaw_Link.STL  r_knee_Link.STL
record/: plotData.m  plot_data.py
robot/: main.cpp  scheduler.h
sim_interface/: MJ_interface.cpp  MJ_interface.h
